--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,5 +4,6 @@ import Wordle from "../components/Wordle.astro";
 ---
 
 <Layout>
+  <h2 id="game-state" style={{width: "fit-content", margin: "auto", height: "3rem"}}></h2>
   <Wordle />
 </Layout>
